--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>숫자 맞추기 게임!</h1>
+    <div id="result-area">숫자를 맞춰보시오!</div>
+    <div id="chance-area">남은 찬스 : 5번</div>
+    <input type="number" id=user-input />
+    <button id="play-button">Go!</button>
+    <button id="reset-button">리셋!</button>
     <script src="main.js"></script>
 </body>
 </html>
